Added case sensitivity to our authorization